chore: update template new version
