# internal/routers/app.go
@@ -3,13 +3,13 @@ package routers
 import (
 	_ "example-go-project/docs"
 	"example-go-project/pkg/config"
+	"example-go-project/pkg/middleware"
 	"example-go-project/pkg/utils"
 	"time"
 
 	"github.com/gin-gonic/gin"
 
 	"example-go-project/internal/handlers"
-	"example-go-project/internal/middleware"
 
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -22,14 +22,13 @@ type Application struct {
 	PingHandler    *handlers.PingHandler
 	ProductHandler *handlers.ProductHandler
 	UploadHandler  *handlers.UploadHandler
+	AuthMiddleware *middleware.AuthMiddleware
 	Config         *config.Config
 }
 
 func (app *Application) SetupRoutes() {
 	// API version group
 	v1 := app.Router.Group("/api/v1")
-
-	authJwt := utils.NewAuthHandler(app.Config.JWTSecretKey, app.Config.JWTExpiresIn)
 
 	// 100 req/1s all route
 	v1.Use(middleware.RateLimit(100, time.Minute))
@@ -46,6 +45,7 @@ func (app *Application) SetupRoutes() {
 		{
 			auth.POST("/register", app.UserHandler.Register)
 			auth.POST("/login", app.UserHandler.Login)
+			auth.POST("/refresh", app.UserHandler.RefreshToken)
 		}
 
 		ping := public.Group("/ping")
@@ -56,18 +56,20 @@ func (app *Application) SetupRoutes() {
 
 	// Protected routes
 	protected := v1.Group("")
-	protected.Use(middleware.JWT(authJwt))
+	protected.Use(app.AuthMiddleware.Protected())
 	{
 		// User routes
 		user := protected.Group("/user")
 		{
 			user.GET("/profile", app.UserHandler.GetProfile)
 			user.PUT("/profile/:id", app.UserHandler.UpdateProfile)
+			user.GET("/logout", app.UserHandler.Logout)
 		}
 	}
 
-	adminProtected := v1.Group("")
-	adminProtected.Use(middleware.JWT(authJwt, utils.AdminRole))
+	adminProtected := protected.Group("")
+	// Admin routes
+	adminProtected.Use(app.AuthMiddleware.RequireRoles(utils.Role("admin")))
 	{
 		adminProtected.POST("/local_upload", app.UploadHandler.UploadMultipleLocalFiles)
 		adminProtected.DELETE("/local_upload/:id", app.UploadHandler.DeleteFile)
@@ -75,7 +77,7 @@ func (app *Application) SetupRoutes() {
 
 		admin := adminProtected.Group("/user")
 		{
-			admin.DELETE("/profile/:id", app.UserHandler.DeleteUser)
+			admin.DELETE("/:id", app.UserHandler.DeleteUser)
 			admin.GET("/list", app.UserHandler.UserList)
 		}
 		product := adminProtected.Group("/product")
